<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:enabled="true"
        android:menuCategory="alternative"
        android:visible="true"
        >
        <item
            android:id="@+id/popular_menu"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />

        <item
            android:id="@+id/history_menu"
            android:icon="@drawable/ic_history"
            android:title="@string/recent_play" />

        <item
            android:id="@+id/folder_menu"
            android:icon="@drawable/ic_folder"
            android:title="@string/tab_folders" />

        <item
            android:id="@+id/genre_menu"
            android:icon="@drawable/baseline_music_note_24"
            android:title="@string/genre" />

        <item
            android:id="@+id/artist_menu"
            android:icon="@drawable/ic_artist"
            android:title="@string/artist" />

        <item
            android:id="@+id/album_menu"
            android:icon="@drawable/ic_album"
            android:title="@string/album" />
    </group>

    <group android:enabled="true"
        android:menuCategory="secondary">

        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/about_menu"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

        <item
            android:id="@+id/support_menu"
            android:icon="@drawable/ic_about"
            android:title="@string/support" />

        <item
            android:id="@+id/exit_menu"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/exit" />

    </group>

</menu>