<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="@dimen/radius_size"
    app:cardElevation="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_standard"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.adivery.sdk.AdiveryNativeAdView
            android:id="@+id/native_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adivery_native_ad_layout="@layout/adivery_native_ad_layout"
            app:placement_id="6fb89f6b-6d4c-46fe-af06-47849426eeeb"
            android:visibility="gone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_detail_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/details"
            android:textAlignment="gravity"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:icon="@drawable/ic_details"
            app:iconPadding="@dimen/padding_standard"
            app:iconTint="?iconTint"
            app:rippleColor="@color/music_item_color_night_mode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_show_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/show_cover"
            android:textAlignment="gravity"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:icon="@drawable/ic_image"
            app:iconPadding="@dimen/padding_standard"
            app:iconTint="?iconTint"
            app:rippleColor="@color/music_item_color_night_mode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/share"
            android:textAlignment="gravity"
            android:textColor="?colorOnSecondary"
            android:textStyle="bold"
            app:icon="@drawable/ic_share"
            app:iconPadding="@dimen/padding_standard"
            app:iconTint="?iconTint"
            app:rippleColor="@color/music_item_color_night_mode" />

        <com.adivery.sdk.AdiveryBannerAdView
            android:id="@+id/banner_ad"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ads_banner_small"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ads_banner_small_margin_top"
            android:visibility="gone"
            android:layout_marginStart="@dimen/ads_banner_small_margin_start_end"
            android:layout_marginEnd="@dimen/ads_banner_small_margin_start_end"
            app:banner_size="banner" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>