<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?colorPrimary"
    app:cardCornerRadius="@dimen/radius_size">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_standard">

        <com.adivery.sdk.AdiveryNativeAdView
            android:id="@+id/native_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adivery_native_ad_layout="@layout/adivery_native_ad_layout"
            android:visibility="gone"
            app:placement_id="6fb89f6b-6d4c-46fe-af06-47849426eeeb"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="gravity"
            android:textSize="@dimen/text_size_body1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <RelativeLayout
            android:id="@+id/favoriteLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:elevation="16dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_favorite_border"
                app:tint="?iconTint"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/favoriteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/favoriteIcon"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap"
                tools:text="@string/app_name" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addPlaylistTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_playlist_add"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="16dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/play_list"
            android:textAlignment="gravity"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shareTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_share"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="16dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/share"
            android:textAlignment="gravity"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detailMusicTextView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_details"
            android:drawableEnd="@drawable/ic_forward"
            android:drawablePadding="16dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/details"
            android:textAlignment="gravity"
            android:textStyle="bold" />

        <com.adivery.sdk.AdiveryBannerAdView
            android:id="@+id/banner_ad"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ads_banner_small"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ads_banner_small_margin_top"
            android:layout_marginStart="@dimen/ads_banner_small_margin_start_end"
            android:layout_marginEnd="@dimen/ads_banner_small_margin_start_end"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            app:banner_size="banner" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>