<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="TitleActivity"
            type="String" />

        <variable
            name="aboutApp"
            type="String" />

        <variable
            name="ThemeLayoutShow"
            type="Boolean" />

        <variable
            name="LanguageLayoutShow"
            type="Boolean" />

        <variable
            name="AboutAppLayoutShow"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="?android:windowBackground"
        android:orientation="vertical"
        tools:context=".settings.views.SettingsPageActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingStart="@dimen/padding_standard"
            android:paddingEnd="@dimen/padding_standard">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_activity"
                android:layout_width="@dimen/icon_size_default"
                android:layout_height="@dimen/icon_size_default"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/ic_back"
                android:tint="?iconTint" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_toEndOf="@id/back_activity"
                android:text="@={TitleActivity}"
                android:textColor="?android:textColor"
                android:textSize="@dimen/text_size_body1"
                android:textStyle="bold"
                tools:text="@string/app_name" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{ThemeLayoutShow ? View.VISIBLE : View.GONE ,default = gone}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:itemCount="2"
                tools:listitem="@layout/theme_items" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycler_view_theme"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:text="@string/warning_restart_activity_theme"
                android:textAlignment="center"
                android:textColor="?android:textColor"
                android:textSize="@dimen/text_size_body2"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycler_view_theme"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:text="@string/system_theme"
                android:textColor="?android:textColor"
                android:textSize="@dimen/text_size_body1"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/system_theme_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="horizontal"
                android:scrollbars="none"
                tools:itemCount="3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/languageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none"
            android:padding="@dimen/padding_standard"
            android:visibility="@{LanguageLayoutShow ? View.VISIBLE : View.GONE ,default = gone}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:visibility="@{AboutAppLayoutShow ? View.VISIBLE : View.GONE ,default = gone}">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_standard"
                android:text="@={aboutApp}"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="@string/about" />

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>