<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="NoResultText"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.activities.SearchActivity">

        <RelativeLayout
            android:id="@+id/custom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_app_bar"
            android:elevation="@dimen/elevation_app_bar"
            android:paddingStart="@dimen/padding_standard"
            android:paddingEnd="@dimen/padding_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back_activity"
                android:layout_width="@dimen/icon_size_default"
                android:layout_height="@dimen/icon_size_default"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_toEndOf="@id/back_activity"
                app:cardBackgroundColor="?colorPrimary"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:focusable="auto"
                    android:layoutDirection="ltr"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textColorHint="?colorOnSecondary"
                    android:cursorVisible="true"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <com.adivery.sdk.AdiveryBannerAdView
            android:id="@+id/banner_ad"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ads_banner_small"
            android:layout_marginStart="@dimen/ads_banner_small_margin_start_end"
            android:layout_marginTop="@dimen/ads_banner_small_margin_top"
            android:layout_marginEnd="@dimen/ads_banner_small_margin_start_end"
            app:banner_size="banner"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/custom_app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_history"
            android:textSize="@dimen/text_size_body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner_ad" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/delete_history"
            android:layout_width="@dimen/icon_size_default"
            android:layout_height="@dimen/icon_size_default"
            android:layout_marginEnd="12dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="@string/result"
            android:textSize="@dimen/text_size_body1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewRecent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@{NoResultText}"
            android:textAlignment="gravity"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result"
            tools:text="@string/app_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result"
            tools:listitem="@layout/item_music" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>